# pallas-thermohl

./: MANIFEST.in  README.md  meta.yaml  pyproject.toml  requirements.txt
doc/: conf.py  getting-started.rst  index.rst  modules.rst  param-defval.rst  thermohl.rst
examples/: create_env  example_power_terms.py  example_rain.py  example_skin_effect.py  example_solver_intensity.py  example_solver_temperature.py  example_sun.py  example_transient.py  example_transient2.py  requirements.txt
src/thermohl/: air.py  cigre.py  cner.py  default_uncertainties.yaml  default_values.yaml  distributions.py  ieee.py  numeric.py  olla.py  rain.py  solver.py  sun.py  thermodynamics.py  uncertainties.py  utils.py
tests/: test_air.py  test_distributions.py
thermohl/: air.py  cigre.py  cner.py  distributions.py  ieee.py  numeric.py  olla.py  rain.py  solver.py  sun.py  thermodynamics.py  uncertainties.py  utils.py
