[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thermohl"
version = "0.0.1"
authors = [
    {name = "Eurobios", email = "ecieren@eurobios.com"},
]
description = "thermohl is a python package for calculations relative to temperature in overhead conductors and their current intensity."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.19.0",
    "pandas >= 1.1.3",
    "scipy >= 1.5.2",
    "pyyaml >= 5.3.1",
]

[project.urls]
"Homepage" = "https://gitlab.eurobios.com/rte/thermohl"