[build-system]
requires = [
    "setuptools>=40.8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "thermohl"
version = "2024.0.0"
authors = [
    { name = "Eurobios Mews Labs", email = "emmanuel.cieren@mews-labs.com" },
]
description = "Calculations relative to temperature and ampacity in overhead conductors."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Mozilla Public License 2.0",
]
dependencies = [
    "numpy >= 1.19.0",
    "pandas >= 1.1.3",
    "scipy >= 1.5.2",
    "pyyaml >= 5.3.1",
    "pyntb >= 2024.0.1"
]

[project.urls]
"Homepage" = "https://github.com/rte-france/pallas-thermohl"
